[package]
name = "gc_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = "0.2.1"
serde_json = "1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
go_quic_client = { path = "../go_quic_client" }
go_udp_request = { path = "../go_udp_request" }
