[package]
name = "go_quic_client"
version = "0.1.0"
edition = "2021"

[dependencies]
quiche = "0.22.0"
ring = "0.17.8"
log = { version = "0.4", features = ["std"] }
log4rs = "1"
mio = { version = "1.0", features = ["net", "os-poll"] }
url = "2.5"

# [[bin]]
# name = "go_quic_client"
# path = "src/client.rs"